[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameBoard.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerRack.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameScreen.gd" type="Script" id=3]
[ext_resource path="res://fonts/GameFont.tres" type="DynamicFont" id=4]

[node name="VBox" type="MarginContainer"]
margin_right = 702.0
margin_bottom = 936.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 702.0
margin_bottom = 936.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 702.0
margin_bottom = 936.0

[node name="GameBoard" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 466.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 470.0
margin_right = 702.0
margin_bottom = 936.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_top = 201.0
margin_right = 494.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PlayerRack1" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 494.0
margin_bottom = 30.0

[node name="PlayerRack2" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 494.0
margin_bottom = 64.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 498.0
margin_right = 702.0
margin_bottom = 466.0
size_flags_vertical = 3

[node name="ActionButtons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 175.0
margin_right = 204.0
margin_bottom = 291.0

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons"]
margin_right = 204.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "OK"

[node name="ChangeLettersButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons"]
margin_top = 40.0
margin_right = 204.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "Change letters"

[node name="PassButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons"]
margin_top = 80.0
margin_right = 204.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 4 )
text = "Pass"

[node name="ChangeLettersButtons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CenterContainer"]
visible = false
margin_left = -7.0
margin_top = 178.0
margin_right = 210.0
margin_bottom = 288.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CenterContainer/ChangeLettersButtons"]
margin_right = 217.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Changing letters"

[node name="AcceptChangeButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/ChangeLettersButtons"]
margin_top = 34.0
margin_right = 217.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "Accept"

[node name="CancelChangeButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer/ChangeLettersButtons"]
margin_top = 74.0
margin_right = 217.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 4 )
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons/ChangeLettersButton" to="." method="_on_ChangeLettersButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/ActionButtons/PassButton" to="." method="_on_PassButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/ChangeLettersButtons/AcceptChangeButton" to="." method="_on_AcceptChangeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/ChangeLettersButtons/CancelChangeButton" to="." method="_on_CancelChangeButton_pressed"]
